# gallery-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
gallery-cli/: Cargo.toml
gallery-cli/src/: image_processor.rs  main.rs
gallery-cli/src/commands/: delete.rs  mod.rs  upload.rs
gallery-core/: Cargo.toml
gallery-core/src/: lib.rs  manifest.rs  s3.rs
gallery-web/: Cargo.toml
gallery-web/src/: handlers.rs  main.rs  state.rs
