[workspace]
members = ["gallery-core", "gallery-cli", "gallery-web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gallery RS"]

[workspace.dependencies]
# S3 client
aws-sdk-s3 = "1.63.0"
aws-config = "1.5.10"
aws-credential-types = "1.2.1"

# Image processing
image = "0.25.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallel processing
rayon = "1.10"

# Progress bars
indicatif = { version = "0.17", features = ["rayon"] }

# Misc
walkdir = "2.5"
