[package]
name = "gallery-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aws-sdk-s3.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono = "0.4"
tracing.workspace = true
