[package]
name = "gallery-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gallery-web"
path = "src/main.rs"

[dependencies]
gallery-core = { path = "../gallery-core" }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
